# climatopic-data

./: .gitignore  README.md  climate.preprocess.ipynb  climate.processing.ipynb  data  indicators.processing.ipynb  periods.processing.ipynb  pyproject.toml  spatial.processing.ipynb  time.processing.ipynb
src/climatopic_data/: definitions.py
src/climatopic_data/components/: hadukgrid.py
src/climatopic_data/defs/hadukgrid/: defs.yaml
src/climatopic_data/shared/: __init__.py
src/climatopic_data/shared/io/: __init__.py  ceda_resource.py  dask_resource.py  thredds_resource.py  xarray_io_manager.py
src/climatopic_data/shared/typing/: __init__.py  resolved.py
src/climatopic_data/shared/xarray/: __init__.py
utilities/: climnorm.py  netcdf.py
