[project]
name = "climatopic_data"
requires-python = ">=3.12,<3.14"
version = "0.1.0"
dependencies = [
    "aiohttp>=3.12.15",
    "bottleneck>=1.5.0",
    "cf-xarray>=0.10.6",
    "cftime>=1.6.4.post1",
    "dagster==1.11.5",
    "dask>=2024.8.0",
    "distributed>=2024.8.0",
    "flox>=0.10.4",
    "h5netcdf>=1.6.4",
    "netcdf4>=1.7.2",
    "numbagg>=0.9.0",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scipy>=1.16.1",
    "xarray>=2024.7.0",
    "xclim>=0.57.0",
    "zarr>=2.18.2",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pyright>=1.1.403",
    "ruff>=0.12.8",
    "notebook>=7.4.5",
    "bokeh>=3.4.3",
    "pooch>=1.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "climatopic_data"
registry_modules = [
    "climatopic_data.components.*",
]


[tool.ruff]
line-length = 79
indent-width = 4
extend-include = ["*.ipynb"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "single"
skip-magic-trailing-comma = false

[tool.pyright]
venvPath = "."
venv = ".venv"
#reportUnknownMemberType = false


